raps-cli/tests/cli/snapshots/cli_tests__cli__help_structure__admin_user_add_to_all_projects_help.snap
---
source: raps-cli/tests/cli/help_structure.rs
assertion_line: 47
expression: stdout
---

  ____      _    ____  ____
 |  _ \    / \  |  _ \/ ___|
 | |_) |  / _ \ | |_) \___ \
 |  _ <  / ___ \|  __/ ___) |
 |_| \_\/_/   \_\_|   |____/

Add a user to all active projects in an account with an optional role

Usage: raps admin user add-to-all-projects [OPTIONS] <EMAIL>

Arguments:
  <EMAIL>  Email address of the user to add

Options:
  -a, --account <ACCOUNT>          Account ID (defaults to APS_ACCOUNT_ID env var)
      --output <FORMAT>            Output format: table, json, yaml, csv, or plain (default: auto-detect) [possible values: table, json, yaml, csv, plain, ndjson]
      --no-color                   Disable colored output
      --role <ROLE>                Role ID to assign in each project (e.g. the project administrator role ID)
      --concurrency <CONCURRENCY>  Parallel requests (defaults to global --concurrency, max: 50)
  -q, --quiet                      Print only the result payload (useful with JSON output)
      --dry-run                    Preview changes without executing
  -v, --verbose                    Show verbose output (request summaries)
      --debug                      Show debug output (full trace, secrets redacted)
      --log-file <PATH>            Write log output to PATH instead of the default platform log directory
      --profile                    Profile performance (execution time, HTTP network time)
      --non-interactive            Non-interactive mode: fail if prompts would be required
      --yes                        Auto-confirm destructive actions
      --strict                     Strict mode for CI: fail on any ambiguity, no silent defaults
      --timeout <SECONDS>          HTTP request timeout in seconds (default: 120, env: RAPS_TIMEOUT)
      --max-retries <N>            Maximum retries for 408/429/5xx responses (default: 3, env: RAPS_MAX_RETRIES). Retries use exponential backoff with jitter and respect Retry-After headers
      --base-delay <SECONDS>       Base delay in seconds for exponential backoff (default: 1, env: RAPS_BASE_DELAY)
      --max-wait <SECONDS>         Maximum wait time in seconds between retries (default: 60, env: RAPS_MAX_WAIT)
      --no-retry                   Disable automatic retries (fail immediately on errors)
      --proxy <URL>                HTTP/HTTPS proxy URL (env: RAPS_PROXY), e.g. http://proxy.corp.example.com:8080
      --no-cache                   Disable the download cache
      --cache-dir <PATH>           Custom cache directory (default: platform cache dir)
      --refresh                    Ignore cached artifacts and re-download
      --offline                    Fail if artifact is not cached (no network requests for downloads)
  -h, --help                       Print help
  -V, --version                    Print version
