raps-cli/tests/cli/snapshots/cli_tests__cli__help_structure__admin_user_help.snap
---
source: raps-cli/tests/cli/help_structure.rs
expression: stdout
---
[0m                                                                             [38;2;241;196;11m░[38;2;245;201;8m░[38;2;249;207;5m░[38;2;253;212;1m░[0m[0m          
[0m                                                                            [38;2;237;191;15m░[38;2;241;196;11m▓[38;2;245;201;8m▓[38;2;249;207;5m▓[38;2;253;212;1m▓[38;2;255;216;5m▓[38;2;255;218;16m▓[38;2;255;221;26m▓[38;2;255;223;37m▒[0m[0m      
[0m                                                                   [38;2;203;151;23m▒[38;2;207;155;25m▒[38;2;210;158;27m░      [38;2;237;191;15m▒[38;2;241;196;11m▓[38;2;245;201;8m▓[38;2;249;207;5m▓[38;2;253;212;1m▓[38;2;255;216;5m▓[38;2;255;218;16m▓[38;2;255;221;26m▓[38;2;255;223;37m▓[38;2;255;225;48m▓[38;2;255;228;59m▓[0m[0m    
   [38;2;210;8;0m░[38;2;212;11;0m▒[38;2;214;14;0m▒[38;2;216;17;0m▒[38;2;218;19;0m▒[38;2;221;22;0m▒[38;2;223;25;0m░         [38;2;244;53;0m░[38;2;246;56;0m░[38;2;248;59;0m░      [38;2;255;79;0m░[38;2;255;82;0m░[38;2;255;85;0m░[38;2;255;87;0m░[38;2;255;90;0m░[38;2;255;93;0m░[38;2;255;96;0m░       [38;2;255;119;0m░[38;2;255;121;0m▒[38;2;255;124;0m▒[38;2;255;127;0m▒[38;2;255;130;0m▒[38;2;255;133;0m▒[38;2;255;136;0m▒[0m[0m                [38;2;196;145;18m▒[38;2;200;148;20m▓[38;2;203;151;23m▓[38;2;207;155;25m▓[38;2;210;158;27m▓[38;2;214;161;29m▓[38;2;218;165;32m▒    [38;2;237;191;15m▓[38;2;241;196;11m▓[38;2;245;201;8m▓[38;2;249;207;5m▓[38;2;253;212;1m▓[38;2;255;216;5m▓[38;2;255;218;16m▓[38;2;255;221;26m▓[38;2;255;223;37m▓[38;2;255;225;48m▓[38;2;255;228;59m▓[0m[0m    
   [38;2;224;27;0m▒[38;2;227;30;0m█[38;2;229;33;0m▒[38;2;231;36;0m▒[38;2;233;39;0m▒[38;2;235;42;0m▒[38;2;237;44;0m▓[38;2;239;47;0m▓[38;2;241;50;0m▒      [38;2;255;70;0m▒[38;2;255;73;0m▒[38;2;255;76;0m▒[38;2;255;78;0m▒      [38;2;255;98;0m▒[38;2;255;101;0m▒[38;2;255;104;0m░[38;2;255;107;0m░[38;2;255;110;0m░[38;2;255;112;0m▒[38;2;255;115;0m▒[38;2;255;118;0m▓[38;2;255;121;0m▒   [38;2;255;132;0m▒[38;2;255;135;0m▓[38;2;255;138;0m▓[38;2;255;141;0m▒[38;2;255;144;0m▒[38;2;255;146;0m▒[38;2;255;149;0m▒[38;2;255;152;0m▒[38;2;255;155;0m▒[0m[0m               [38;2;192;142;16m▒[38;2;196;145;18m▓[38;2;200;148;20m▓[38;2;203;151;23m▓[38;2;207;155;25m▓[38;2;210;158;27m▓[38;2;214;161;29m▓[38;2;218;165;32m▓[38;2;221;170;28m▓[38;2;225;175;25m░[38;2;229;180;21m░[38;2;233;186;18m░[38;2;237;191;15m▒[38;2;241;196;11m▓[38;2;245;201;8m▓[38;2;249;207;5m▓[38;2;253;212;1m▓[38;2;255;216;5m▓[38;2;255;218;16m▓[38;2;255;221;26m▓[38;2;255;223;37m▓[38;2;255;225;48m▒[0m[0m     
   [38;2;239;47;0m▓[38;2;241;50;0m▓[38;2;243;53;0m░   [38;2;252;64;0m▒[38;2;254;67;0m▓[38;2;255;70;0m▒    [38;2;255;84;0m░[38;2;255;87;0m▒[38;2;255;89;0m▒[38;2;255;92;0m░[38;2;255;95;0m▒[38;2;255;98;0m▒[38;2;255;101;0m░    [38;2;255;115;0m░[38;2;255;118;0m▒[38;2;255;121;0m▒     [38;2;255;138;0m▓[38;2;255;140;0m▓[38;2;255;143;0m░ [38;2;255;149;0m░[38;2;255;152;0m▓[38;2;255;155;0m▓[0m[0m                     [38;2;189;138;14m░[38;2;192;142;16m▓[38;2;196;145;18m▓[38;2;200;148;20m▓[38;2;203;151;23m▓[38;2;207;155;25m▓[38;2;210;158;27m▓[38;2;214;161;29m▓[38;2;218;165;32m▓[38;2;221;170;28m▓[38;2;225;175;25m▓[38;2;229;180;21m▓[38;2;233;186;18m▓[38;2;237;191;15m▓[38;2;241;196;11m▓[38;2;245;201;8m▓[38;2;249;207;5m▓[38;2;253;212;1m▓[38;2;255;216;5m▓[38;2;255;218;16m▓[38;2;255;221;26m▒[0m[0m       
  [38;2;251;63;0m▒[38;2;254;66;0m█[38;2;255;69;0m▓[38;2;255;72;0m░[38;2;255;75;0m░[38;2;255;78;0m▒[38;2;255;80;0m▒[38;2;255;83;0m▓[38;2;255;86;0m▒    [38;2;255;100;0m░[38;2;255;103;0m▒[38;2;255;106;0m▒[38;2;255;109;0m░ [38;2;255;114;0m░[38;2;255;117;0m▒[38;2;255;120;0m░    [38;2;255;134;0m░[38;2;255;137;0m▒[38;2;255;140;0m░    [38;2;255;154;0m▒[38;2;255;157;0m▓[38;2;255;160;0m▒   [38;2;255;171;0m▒[38;2;255;174;0m▓[38;2;255;177;0m▓[38;2;255;180;0m▒[38;2;255;182;0m▒[0m[0m                  [38;2;189;138;14m▓[38;2;192;142;16m█[38;2;196;145;18m▓[38;2;200;148;20m▓[38;2;203;151;23m▓[38;2;207;155;25m▓[38;2;210;158;27m▓[38;2;214;161;29m▓[38;2;218;165;32m▓[38;2;221;170;28m▓[38;2;225;175;25m▓[38;2;229;180;21m▓[38;2;233;186;18m▒[38;2;237;191;15m▒[38;2;241;196;11m▒[38;2;245;201;8m▒[38;2;249;207;5m▓[38;2;253;212;1m▓[38;2;255;216;5m▓[38;2;255;218;16m▒[0m[0m        
  [38;2;255;83;0m▓[38;2;255;86;0m█[38;2;255;89;0m▓[38;2;255;91;0m▒[38;2;255;94;0m▓[38;2;255;97;0m▓[38;2;255;100;0m▒     [38;2;255;117;0m░[38;2;255;120;0m▒[38;2;255;123;0m▒[38;2;255;125;0m░  [38;2;255;134;0m░[38;2;255;137;0m▒[38;2;255;140;0m▒   [38;2;255;151;0m░[38;2;255;154;0m▒[38;2;255;157;0m▒[38;2;255;159;0m▒[38;2;255;162;0m▒[38;2;255;165;0m▒[38;2;255;168;0m▒[38;2;255;171;0m▒[38;2;255;174;0m▒[38;2;255;176;0m░      [38;2;255;196;0m▒[38;2;255;199;0m▒[38;2;255;202;0m▓[38;2;255;204;1m█[38;2;255;207;4m▓[38;2;255;209;6m░[0m[0m               [38;2;189;138;14m░[38;2;192;142;16m▓[38;2;196;145;18m▓[38;2;200;148;20m▓[38;2;203;151;23m▓[38;2;207;155;25m▓[38;2;210;158;27m▓[38;2;214;161;29m▓[38;2;218;165;32m▓[38;2;221;170;28m▓[38;2;225;175;25m▓[38;2;229;180;21m▒[38;2;233;186;18m▒[38;2;237;191;15m▒[38;2;241;196;11m▒[38;2;245;201;8m▒[38;2;249;207;5m▒[38;2;253;212;1m▓[38;2;255;216;5m▓[38;2;255;218;16m▓[38;2;255;221;26m▓[38;2;255;223;37m▓[38;2;255;225;48m▓[38;2;255;228;59m▓[38;2;255;230;69m▓[38;2;255;233;80m▓[38;2;255;235;91m▓[38;2;255;238;102m░[0m[0m
 [38;2;255;99;0m░[38;2;255;102;0m█[38;2;255;105;0m▓   [38;2;255;116;0m▒[38;2;255;119;0m▓[38;2;255;122;0m▒   [38;2;255;133;0m░[38;2;255;136;0m▒[38;2;255;139;0m▒[38;2;255;142;0m▒[38;2;255;145;0m▒[38;2;255;148;0m▒[38;2;255;150;0m▒[38;2;255;153;0m▒[38;2;255;156;0m▒[38;2;255;159;0m▒[38;2;255;162;0m░  [38;2;255;170;0m░[38;2;255;173;0m▒[38;2;255;176;0m░[38;2;255;179;0m░[38;2;255;182;0m░[38;2;255;184;0m░             [38;2;255;219;20m▒[38;2;255;221;23m█[38;2;255;223;26m▓[0m[0m                       [38;2;218;165;32m▒[38;2;221;170;28m▓[38;2;225;175;25m▓[38;2;229;180;21m▓[38;2;233;186;18m▒[38;2;237;191;15m▒[38;2;241;196;11m▒[38;2;245;201;8m▒[38;2;249;207;5m▓[38;2;253;212;1m▓[38;2;255;216;5m▓[38;2;255;218;16m▓[38;2;255;221;26m▓[38;2;255;223;37m▓[38;2;255;225;48m▓[38;2;255;228;59m▓[38;2;255;230;69m▓[38;2;255;233;80m▓[38;2;255;235;91m█[38;2;255;238;102m▓[0m[0m
 [38;2;255;119;0m▒[38;2;255;122;0m█[38;2;255;125;0m▒   [38;2;255;136;0m░[38;2;255;139;0m▓[38;2;255;142;0m▓  [38;2;255;150;0m░[38;2;255;153;0m▓[38;2;255;156;0m▒[38;2;255;159;0m░[38;2;255;161;0m░[38;2;255;164;0m░[38;2;255;167;0m░[38;2;255;170;0m░[38;2;255;173;0m░[38;2;255;176;0m▒[38;2;255;178;0m▒[38;2;255;181;0m░  [38;2;255;190;0m▒[38;2;255;193;0m▒[38;2;255;195;0m░        [38;2;255;217;17m░[38;2;255;219;20m▒[38;2;255;221;23m░[38;2;255;223;25m░[38;2;255;225;28m░[38;2;255;227;31m░[38;2;255;229;34m░[38;2;255;231;37m▒[38;2;255;234;40m▓[38;2;255;236;42m█[38;2;255;238;45m▒[0m[0m                      [38;2;214;161;29m▒[38;2;218;165;32m▓[38;2;221;170;28m▓[38;2;225;175;25m▓[38;2;229;180;21m▓[38;2;233;186;18m▓[38;2;237;191;15m▓[38;2;241;196;11m▓[38;2;245;201;8m▓[38;2;249;207;5m▓[38;2;253;212;1m▓[38;2;255;216;5m▓[38;2;255;218;16m▓[38;2;255;221;26m▓[38;2;255;223;37m▓[38;2;255;225;48m▓[38;2;255;228;59m▓[38;2;255;230;69m▓[38;2;255;233;80m▓[38;2;255;235;91m▓[38;2;255;238;102m░[0m[0m
 [38;2;255;138;0m▒[38;2;255;141;0m▓     [38;2;255;158;0m▒[38;2;255;161;0m▒[38;2;255;164;0m░[38;2;255;167;0m░[38;2;255;170;0m▒[38;2;255;172;0m▒       [38;2;255;195;0m░[38;2;255;198;0m░[38;2;255;201;0m░ [38;2;255;206;2m░[38;2;255;208;5m░[38;2;255;210;8m░         [38;2;255;231;36m░[38;2;255;233;39m▒[38;2;255;235;42m▒[38;2;255;238;45m▒[38;2;255;240;48m▓[38;2;255;242;51m▓[38;2;255;244;53m▒[38;2;255;246;56m▒[38;2;255;248;59m▒[0m[0m                      [38;2;207;155;25m▒[38;2;210;158;27m▓[38;2;214;161;29m▓[38;2;218;165;32m▓[38;2;221;170;28m▓[38;2;225;175;25m▓[38;2;229;180;21m▓[38;2;233;186;18m▓[38;2;237;191;15m▓[38;2;241;196;11m▒[38;2;245;201;8m░[38;2;249;207;5m░[38;2;253;212;1m░[38;2;255;216;5m▓[38;2;255;218;16m▓[38;2;255;221;26m▓[38;2;255;223;37m▓[38;2;255;225;48m▓[38;2;255;228;59m▓[38;2;255;230;69m▓[38;2;255;233;80m▓[38;2;255;235;91m▒[0m[0m 
[0m                                                                   [38;2;203;151;23m▓[38;2;207;155;25m▓[38;2;210;158;27m▓[38;2;214;161;29m▓[38;2;218;165;32m▓[38;2;221;170;28m▓[38;2;225;175;25m▓[38;2;229;180;21m▓[38;2;233;186;18m▓[38;2;237;191;15m▓[38;2;241;196;11m▓    [38;2;255;218;16m▒[38;2;255;221;26m▓[38;2;255;223;37m▓[38;2;255;225;48m▓[38;2;255;228;59m▓[38;2;255;230;69m▓[38;2;255;233;80m▒[0m[0m  
[0m                                                                   [38;2;203;151;23m▓[38;2;207;155;25m▓[38;2;210;158;27m▓[38;2;214;161;29m▓[38;2;218;165;32m▓[38;2;221;170;28m▓[38;2;225;175;25m▓[38;2;229;180;21m▓[38;2;233;186;18m▓[38;2;237;191;15m▓[38;2;241;196;11m▒      [38;2;255;223;37m░[38;2;255;225;48m▒[38;2;255;228;59m▒[0m[0m    
[0m                                                                     [38;2;210;158;27m▒[38;2;214;161;29m▓[38;2;218;165;32m▓[38;2;221;170;28m▓[38;2;225;175;25m▓[38;2;229;180;21m▓[38;2;233;186;18m▓[38;2;237;191;15m▓[38;2;241;196;11m░[0m[0m             
[0m                                                                         [38;2;225;175;25m░[38;2;229;180;21m░[38;2;233;186;18m░[38;2;237;191;15m░[0m[0m              
Bulk user management operations

Usage: raps admin user [OPTIONS] <COMMAND>

Commands:
  list                 List users in an account or project
  add                  Add a user to multiple projects
  remove               Remove a user from multiple projects
  update               Update user roles and/or company across multiple projects
  add-to-project       Add a user to a single project by email
  remove-from-project  Remove a user from a single project
  update-in-project    Update a user's role in a single project
  import               Import new users to a project from CSV
  add-to-all-projects  Add a user to all active projects in an account with an optional role
  help                 Print this message or the help of the given subcommand(s)

Options:
      --output <FORMAT>       Output format: table, json, yaml, csv, or plain (default: auto-detect) [possible values: table, json, yaml, csv, plain, ndjson]
      --no-color              Disable colored output
  -q, --quiet                 Print only the result payload (useful with JSON output)
  -v, --verbose               Show verbose output (request summaries)
      --debug                 Show debug output (full trace, secrets redacted)
      --log-file <PATH>       Write log output to PATH instead of the default platform log directory
      --profile               Profile performance (execution time, HTTP network time)
      --non-interactive       Non-interactive mode: fail if prompts would be required
      --yes                   Auto-confirm destructive actions
      --strict                Strict mode for CI: fail on any ambiguity, no silent defaults
      --timeout <SECONDS>     HTTP request timeout in seconds (default: 120, env: RAPS_TIMEOUT)
      --max-retries <N>       Maximum retries for 408/429/5xx responses (default: 3, env: RAPS_MAX_RETRIES). Retries use exponential backoff with jitter and respect Retry-After headers
      --base-delay <SECONDS>  Base delay in seconds for exponential backoff (default: 1, env: RAPS_BASE_DELAY)
      --max-wait <SECONDS>    Maximum wait time in seconds between retries (default: 60, env: RAPS_MAX_WAIT)
      --no-retry              Disable automatic retries (fail immediately on errors)
      --proxy <URL>           HTTP/HTTPS proxy URL (env: RAPS_PROXY), e.g. http://proxy.corp.example.com:8080
      --concurrency <N>       Maximum concurrent operations for bulk commands (default: 5, env: RAPS_CONCURRENCY)
      --no-cache              Disable the download cache
      --cache-dir <PATH>      Custom cache directory (default: platform cache dir)
      --refresh               Ignore cached artifacts and re-download
      --offline               Fail if artifact is not cached (no network requests for downloads)
  -h, --help                  Print help
  -V, --version               Print version
